lab1/Test/L1-A-1-71.output
Error Type B at Line 3
Error Type B at Line 38
Error Type B at Line 100
Error Type B at Line 121
