lab1/Test/L1-A-1-71.cmm
struct LibcYeAJj8R {
  float dWXmoq0Jvk7x = ! ! - ISfyWfJhAN4 ( oDbW7lICFRvhvBeEVyDC 
    [ ) / - - - P6JsX + ! p ( ) / - Wtt3Bh68HmZ / aGqz_xLML2 
    ( ) [ qei0dHzp2ckwyu ] [ JhvhoXprppz ] != - ! - KkfFciWqPgQX8zLowQ5G 
    / PWZq9gTmSrSH2_ ( ) . KrIZeii6c3esqJv [ zmLMwSxqsDnOIGZ 
    ] / B45Y ( ) * - gNi9whvnfO6O * 1251700136.152478873 
    / ! MmmlohvEp - ! SjypW_w9mXIxhWbw1 * rDMyc5k / ebuhOEhqzCJlvqPrg9a 
    / S3LwYq / UkcO5vtZ4UG62xTZM / z6r_WBxdv6R2iM_ + - 
    ILOKo76tO_VZbYtR3MBU / EivU0CXkXXzb1 * hvxhT2Bko / 
    VwwcrreXGDVd > ! - 802266032.2113597274 + - vry8I38M9T 
    / Z2g2s4hBDOSu8Mp9 + ! kcvSfOywCtGaeh > ! ! - VdbSfB0rlI 
    * iVfvSqZ7m / 897553888 * ! tcA / ! DnGr5Y0Cof <= 
    - ( k_kwIexPNKU ( ) . wBpteg . ophom7MlqYMwV = wXkOXO3yTmkzgT 
    ) [ dm9Q92yas ] - ! i_EwcGsNfsX * Oe1jqMcY3SdC2C == 
    ( - IJlBy31zfnlpb6LMc ( ) . h . ZLgMdMOmDdul . bj 
    + tFl - pyK + S505H8qUvqFGej0Ak <= m ) . JVl0Rxxb4v 
    . nv . rWT1Jh6G_ItNR / ZYjjaF4OpRIY15mJx ( ) * ! QZ4LkAyUCyCioKu9w_y 
    * ! q0ioWZFBWkxJ2eIwn * - e9Dj_BEBesZyF_J * - bP0yI7TtP9P 
    && - SVUtwt0gWmVB28vLPZA ( ) + - k5wi * xG * K8OMKUFwPQQq 
    / Lea71p6HgUJm2A - ! c_egk389m_X9Oi4Z4nuM - ARdW1wbJy 
    ( E ) . mw + ! Mqx_2 / y8JiACzw4WqluqUcZQM * jJbJUJ8Mg9pHOHBOGF 
    * zD + ! PwH98LQ / mIaQDPs * Rf6_phql * FONEyTlvJ3NdSDv 
    * eBCskmB8CmRa - - wU72VuHZ0 * eVXk0sWTJBj6f * EzReJXmn7 
    + ! AyPVRTq - - eRntlgsyjfI * rJ4o4 * n8od_mE1UgGj9wse 
    / Wi6phJg >= ! Pi37DbKNRC50jgmm ;
}xx8RZuioviMlP2tmTnx ( ) {
  float L2JrhI24lwkGo8DB6N = - ! ! - ! o3Y9n8k3Ez18bJEyBC 
    = vG2r ( ) + ! B * EGr9E - ! JyKN / DBFTJ * exvgtayVbVoFtS8 
    - - NjDh * YnLZ - ! FzGFJF / LUBSG6 / rbdzVErx16JzZbrl 
    * oaZFxf * dD4NAQmK4F2zTqw95 != - rtuHqy9sQZ_P1c6ztNf 
    / vdnsKrQS0wGi_1R39 / As * M7 * gykKS0uEwLgheSnE / 
    YNWGNgBc80o5lgpyHRpQ * yPGuQV / Z4Bn7x2tmDE1jQ > - 
    w1I1q / cGYe8Sw_KkPToEtzxh >= - d5Z3Rmn2syzV / qmHCYU7rF0wGE5u14Z1i 
    * D * BKYzbHaqp9Dlip / MIQiPBX2xwNnHGW3 + tETOrV9 
    + cV2l4LzOsW > AyhY ( ekTnUSx0Gcb61_cy8llK ) . bB1_hIllYOCyYGqtkj8 
    . b_OSVPLbkh [ hP ] / WDt * N8w7b5rHIZFeNpPRR / IT_xvLc 
    * YI8H_WMeETzO / mj6YOafK + ZnC3sYfrUhxkz_RNLe > ! 
    _gu != int - xHoXAbn * bRg0yFsjk1bZfyo86d / Kf5s4_An 
    / uRpzC3L_h * LW && - ZYRoyq7DsJP4_4ivAYB / xrGrdsl 
    * EWfeOoNrrqFGPi * EFPpyGZZ6dUFDYd / qQfPqr < l0KDBr6LAeJo1Hf 
    > O0Xa0NaZReY6gLnXzsg >= vsb_rTZguRB0_3JMSGk != PGP0QPac0c8 
    != HZ != sm70bR91O4wH == lwnYSUqmamync6 && - w_Wj065F5 
    * DjwGFFt5on2Kee * iL5ZR13wdnZQ9yOt / tbKSXkIyjYBT56 
    / GZ - d8speMh7hQ - sObqfK + G_AFjAKCKx - RF2ACEL2Dg1WKgu45F 
    - llqw9fvm >= hkD9G9vGqJv_n >= OO0IgZ19oU91SM <= wLpbWJzxGxarq1MP 
    == EuBF66uv9D8w5C2a > uyM98P > KQxDEJfniP7r == xjVpfbzQNf_4nJIPOI_ 
    || JamVHwtuuZo ( yrjLMRktjWQ ) * SJjIY8I3v6y9 / RPgooEzgRPxIJSDMxvy 
    * nQ2X9Eumz2r0cg - U0IzAuUUMyn4msr3 + iUuOKp7K + NOhe 
    - VgrMWvwsQDv0 - ST04ua2 < Ae2JUxH , F8HGhZ_r3Om9mM3LR_ 
    = igIC6Bf8hC60qzH2HdS ( ) - ! l0DRMkJ1zO_e1bj - ! 
    aWH02P / frh8RpnfDud + bynTmqW1him1U8dEE8 ( Htn3EKrUCkryq 
    ) / ZI8i2MiiV0cdR3wvVM * Uy < - gW - FQ0 + SPziHHqhpvQcsiT4v 
    + I199ZL4ruB + mgLZ7FROn - oVa98O5DTIX5nOmH4k - W3qvqaOSL6ai364RU 
    - FJTfuQnoN8GhN - jsFR_hfKfQzUuENttK66 == N03X5qW8 
    ( bV8N0RRf2b19Q ) - _f4nbM + giEkvogTdqovZhPXqnsJ 
    > ! vv1hAaIr8U * V1kGtI2w < ctpIjvMhiD18m3KPhKk ( 
    ) / yNakgoj * gqa - KLg6nf0fg9_1V1 + pydLQjmFEpb - 
    g2cjXWXc4u <= ! jn5 * pX_4OwBrgL_ud == - HM5Vr8CCgoqdo5 
    + KaQSEwA1HTz1HHQX + PdSlh + vy <= - YETTAksIx0k_qP 
    / RfQ != ! tIOFCHhpOp3o7 * vTAyTnFDmYin5s276 + aRdikSeQOPmU6Is63PX 
    + YaYh + n3E < ! vJay - bI8 > ! ie * fbod3wBcu / pWZBRcZ 
    < ! si5QLMj / L44iyl + MqAo == ( f ) [ QEIXZDs2b94YYYDRGF 
    ] / YxZA - g3S3Vcb8 - MGgJU - jR2L - xn8pi15f1xipEnVzkgKZ 
    >= TVmE ( vH77wnQARe ) [ B75T7aCf ] [ oGur ] * fW 
    * bTgahWixPbl050qT * yHts16HGQ9 + L330o3QB_ + rE2UJz 
    && p1n5M06EtLJvOr ( ) . lT99GdgJ9M3pW / g53VOd4ERgc 
    / Id8FxsmU * vTjj2QoLzNtgJz2V + CYoAnzs4wuwSz_i - 
    dncG42IQkIfSUAV >= I == w3U >= S2cXuaAKnvcaIwgs < 
    qdffi != npufU9w7KuX >= Kn != Ia1NAL4xUfDbMx7dB > 
    yQ != jqrpKv == G36Dg <= TV4UReCUs7jm == _V <= SB 
    >= PVfqHA6llxYP6ngl >= lEKBErIkETgCnyhqsJf < Zf3D_GyeajhXxQQ 
    >= S9 || - P / wWdZoL3BXbV / PLM_XN / CfnmkuyYqJwVGesX 
    * EVKqpd6trhmcjE40Z / PhmQ8m + bcr1UxCOU == bL1a7HYjhtHFSd 
    <= hK1yeRgM6yui6 > IcqMpHExQ_oLGyAzH == TTm03jviy1xGG1TIqu 
    > vRHnezMmasucdnq1kl <= T == mY4o076GTVxt5n9 == CM 
    > rdqbc7lsfz <= GhXlfdTQX02Nm > xfBmKAbSlpkoPuXS || 
    ! sq_YWRatKNU * l / UgpYrfoH9_hYq / SGOXUX0G2mJ3P 
    / Ylm2Dq4LNZDx * LxoDfoleZgwfcF4T - suq6j1TFW6oJnsgekw4 
    + fM5KTSTcT - j != wrd < Y9_LYy6 == A0Ub_mWnjhZiuatL 
    < inmkrqegVH50JvCy3d <= qaEbDUy9 <= lO7 > hjee51FD_feA 
    > aJWl9kt4Ki8GFqzGQo <= i2dA1KlzhpEXXAJa <= U && LN7kLByi 
    , XbVgLGs4RgaHWIIeh [ 795375662 ] [ 1556255405 ] = 
    wtKjG0gQr ( ) [ Bn0g0 ] * cKaYn * gCoWE0 * jMYKMWCPYQ0DkOblp 
    / SoSG_LbLsY7jtNeN1tu9 * x4 * rYUZx1GS4vrrUh7ySwi 
    * LpQ29fdwlQs * Y * an0uLkRvd1Mwy * wwtUVhPoiUAlzgP6 
    * jNjAuxU4lr * bBAcdXDB07GbfofPQFKy / wAe2RSqu / fNzAAgHhniTdMEA5 
    + nEYzvoSYU8ktQAP3I + UgSj , CSryqi [ 275458271 ] 
    [ 2125845694 ] ;
  struct k fJ2rU8O_R ;
  if ( ! ! eA5GzcvwqYcs ( pbVjaDliziSi ( S0ku ) = 
    QLtUn9h_6qF , HYU9Ubj6 ) * - - - Aukn7DZjaKOPTAM7jQXY 
    * ! ! - wWe_O4jfM0v / xqOvMnIW ( ) . Ti9hL40uCURrJlvtu 
    * ! ppj ( AK3z_1GgVjbOI5TE ) . vS1qcqWQXE - ! HQGVrbsPiPqahs2P75B 
    ( ) - W1 ( ) [ ( Fo ) / hsjpMFHAhzO2Dc / Pcqk / j 
    * kyuZM2nYfBbhQiot + w3BJg5 + InnqbrhjQfKuy + cvKLiGq 
    - Zshm - e_5PD58PZg0d3izaCRub + RYuCc3ohH - Eur - 
    D5ilp_ - lCWqrJZfQMsvbJ_Q == eJ609vSkjuc > F4sdpDu__KZjYmPztF 
    <= ormb2FvCz2l_ > tsvmrMxs9voAI >= ZoMttK6IWBXT < 
    gJHSxeZ8rlbAa7AnAT || q6apEthqz67nh8O || Kjo3bYerU0JjOpx 
    ] * - oIu4 < - - ! cnr8ZszZQq 275857895.696398844 
    )   return fPqrE75PBFs ( QP5BA5K4_8xVxAOdDa ) . RD4Bd3QdyzAP0AZURlFM 
    [ vW7E43bI8Wcl ] . amV5p8adL9rbHTxrEam [ wIExXYQ5zqn5Rhl8KN 
    ] = KfohY ;

}
int V0Jo4ptvlOMs ( struct nB U ) {
  struct OhA8urh33PYZG NDkro9cigAkXopS [ 102180364 
    ] [ 466634585 ] [ 2131622595 ] [ 1742660644 ] = - 
    - ! ! B * ( ! Z4uTzxvtJpAX1W4hy * J / DpMjMCeqAvm 
    / T8fu9kMZ8RvjFfN5m5ho * L5 / yo8Nq / dit / TZhJnY 
    * bd / D3Cc63cfWK6vky + IYW1UyRms == DqMfEMscBbj2I3LKE89 
    < sABoY9MdYN7PZ == FV <= ays0d60oFqmYSgpcoJ_U > fE4Euiu_IKP0OpE0UB 
    != d == NX3tQR >= Kq1vgNPmF7 <= GWF6x2Uf5l2o > fyw70Wwi4vLml9p 
    < Q6KKJkOy_SfBYu < Q1RUWFzArjbFs0 >= HgSOf <= QmLIJNK 
    >= bNol > Woh93abJPZNy140S >= zCCrULuQ_z <= zV == 
    HfEP3cSQZgUd > D8ofB < FpVZDHoqEAs == FFdfW_wH0IdXZ 
    <= WoZB_7oc_W_ || px ) * ! ! pEyezj3MlXn2KY0toZ8e 
    - - WB7R1F0oEo8 ( ) [ MUsXgfznQf04W_pb5MU_ ] * M97 
    < FBzXNgLROrTausgzT ( ) [ sLieD_NIc3WdKIo8D ] . C7x0qdFnUYeKR 
    / Lv2138_yJW93UIhprnb / BiV95vR / rR3lLi9FM8Mv8LoIWiYB 
    * d4Mn6qSEAtJLrYLU / Bg - bgr7on4p int - YHKmNfk8q 
    ;
  float iIJiI8wn3ISgZai68cL ;
}
int Gk84P [ 430629270 ] , hT6G6SD0aCoP5 , AWm 


;
struct {
  int CnOjaVqY96s9zRE81vhZ [ 147572454 ] = - ! ScFBFLn1l6EW3gOG 
    = TNYjh , vNWNM7N4MB2B [ 952236463 ] = eb7TGckMTY 
    ;
  float _7qbncvPY [ 1374607731 ] ;
  int _tCWQkU1zC6Yc6HhE [ 1411978138 ] [ 275628915 
    ] , HbUfILMmiJ ;
  int umbwT8m = Qqu , mRH74bk ;
  struct hW4m14s gbOJ ;
}YODq , DQO [ 340470186 ] 

;
struct QqoFfH IM ( float GEg [ 217773203 ] [ 1653918994 
  ] [ 1961396054 ] ) {
}
